增加ScrollView滑动标题栏颜色渐变效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.qiangxi.populareffect" >
+<manifest package="com.qiangxi.populareffect"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainActivity" >
+        android:theme="@style/childStyle">
+        <activity
+            android:name=".activity.MainActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".base.BaseActivity"/>
+        <activity android:name=".activity.SwipeBackActivity"/>
+        <activity
+            android:name=".activity.scrollview.ScrollViewFadeActivity"
+            android:theme="@style/childStyle2"/>
+        <activity android:name=".activity.listview.ListViewFadeActivity">
+        </activity>
+        <activity android:name=".activity.recyclerview.RecyclerViewFadeActivity">
         </activity>
     </application>
 
