--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.qiangxi.populareffect"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.qiangxi.populareffect">
 
     <application
         android:allowBackup="true"
@@ -12,20 +12,22 @@
             android:name=".activity.MainActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".base.BaseActivity"/>
-        <activity android:name=".activity.SwipeBackActivity"/>
+        <activity android:name=".base.BaseActivity" />
+        <activity android:name=".activity.SwipeBackActivity" />
         <activity
             android:name=".activity.scrollview.ScrollViewFadeActivity"
+            android:theme="@style/childStyle2" />
+        <activity
+            android:name=".activity.listview.ListViewFadeActivity"
             android:theme="@style/childStyle2"/>
-        <activity android:name=".activity.listview.ListViewFadeActivity">
-        </activity>
-        <activity android:name=".activity.recyclerview.RecyclerViewFadeActivity">
-        </activity>
+        <activity
+            android:name=".activity.recyclerview.RecyclerViewFadeActivity"
+            android:theme="@style/childStyle2"/>
     </application>
 
 </manifest>
