--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.jude:easyrecyclerview:4.2.3'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'me.immortalz:transitionhelper:1.0.4'
 }
