新增相关readme文档

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
         <activity
             android:name=".activity.main.MainActivity"
             android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity android:name=".base.BaseActivity"/>
         <activity android:name=".activity.main.SwipeBackActivity"/>
@@ -36,12 +41,8 @@
         <activity android:name=".activity.CustomViewPagerActivity">
 
         </activity>
-        <activity android:name=".activity.BounceScrollViewAcivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+        <activity android:name=".activity.scrollview.BounceScrollViewAcivity">
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
     </application>
 
