编写ViewPager滑动跳转文档

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
         <activity android:name=".activity.animation.LayoutAnimationActivity">
         </activity>
-        <activity android:name=".activity.CustomViewPagerActivity">
+        <activity android:name=".activity.viewpager.CustomViewPagerActivity">
 
         </activity>
         <activity android:name=".activity.scrollview.BounceScrollViewAcivity">
