测试ViewPager嵌套ViewPager的滑动冲突问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
         </activity>
         <activity android:name=".activity.layout.ArcLayoutActivity">
         </activity>
+        <activity android:name=".activity.viewpager.CustomViewPagerActivity02">
+        </activity>
     </application>
 
 </manifest>
